[gd_scene load_steps=6 format=3 uid="uid://dkufj4sv64avp"]

[ext_resource type="Script" uid="uid://d37a6aqva6idi" path="res://scenes/game/game.gd" id="1_b8j6q"]
[ext_resource type="PackedScene" uid="uid://cvcpo1lcpdoyt" path="res://scenes/level_ui/player_level_ui.tscn" id="2_gtdlk"]
[ext_resource type="PackedScene" uid="uid://g3e0eodhl7xl" path="res://menus/menu.tscn" id="3_gr4f4"]
[ext_resource type="PackedScene" uid="uid://coxcqmcg3kk6h" path="res://scenes/level_ui/tree_level_ui.tscn" id="3_wclvw"]

[sub_resource type="Environment" id="Environment_lfrn8"]
background_energy_multiplier = 3.08
glow_normalized = true

[node name="Game" type="Node3D"]
script = ExtResource("1_b8j6q")

[node name="TreeParent" type="Node3D" parent="."]
process_priority = 1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.54406, 6.945)
environment = SubResource("Environment_lfrn8")
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerLevelUI" parent="UI" instance=ExtResource("2_gtdlk")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 400.0
offset_bottom = 146.0
grow_horizontal = 1
grow_vertical = 1

[node name="TreeLevelUI" parent="UI" instance=ExtResource("3_wclvw")]
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -400.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 143.0
grow_horizontal = 0
grow_vertical = 1

[node name="XP_Timer" type="Timer" parent="."]
autostart = true

[node name="Menu" parent="." instance=ExtResource("3_gr4f4")]
visible = false
isInGame = true

[connection signal="timeout" from="XP_Timer" to="." method="_on_xp_timer_timeout"]
